# Lango

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  formatter.rs  main.rs  setup.rs  types.rs
src/dict/: ecdict.rs  mod.rs  online.rs
